[package]
name = "mmb-parser"
version = "0.6.0"
readme = "README.md"
repository = "https://github.com/trivial-rs/mmb-parser"
authors = ["Ivo C.S. Wingelaar <ivo@codeforge.rs>"]
description = "A parser for the Metamath Zero binary proof format"
keywords = ["metamath-zero"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
nom = {version = "5", default-features = false, features = ['std']}
mmb-types = "0.3.0"
